# LLM

./: .env.example  .gitignore  README.md  guia_no_sobrepensar_toolkit.md  pyproject.toml  requirements.txt  resultados_etapa_01.md  toolkit_release_01_core_local.md  toolkit_release_02_rag_memory.md  toolkit_release_02_step2_rag_improvements.md  toolkit_release_03_agents_langgraph.md  toolkit_release_04_evaluation_deployment_specialists.md
apps/: gradio_chat.py
notebooks/: 01_llm_client_smoke_test.ipynb  02_business_brochure_generator.ipynb  03_deep_research_agentic_workflow.ipynb  04_pydantic_basemodel_structured_output.ipynb  05_async_llm_limits_basemodel.ipynb  06_gradio_chat_memory.ipynb  07_document_ingestion.ipynb  08_basic_rag.ipynb  09_rag_debugging.ipynb  10_rag_with_memory.ipynb
src/llmkit/: __init__.py
src/llmkit/config/: __init__.py  logging.py  settings.py
src/llmkit/llms/: __init__.py  base.py  factory.py  messages.py  model_registry.py  ollama_client.py  openai_client.py  openai_compatible_client.py
src/llmkit/memory/: __init__.py  context.py  sqlite_memory.py
src/llmkit/prompts/: __init__.py  prompt_template.py  registry.py
src/llmkit/rag/: __init__.py  answer.py  embeddings.py  loaders.py  splitters.py  vectorstores.py
src/llmkit/schemas/: __init__.py  base.py  llm_outputs.py  rag_outputs.py
src/llmkit/web/: __init__.py  website.py
tests/: test_llm_factory.py  test_memory.py  test_prompt_registry.py  test_rag.py  test_settings.py  test_structured_output.py  test_web_helpers.py
